# Hazelbot

./: .env.sample  .gitignore  BotResponses.cpp  BotResponses.h  CMakeLists.txt  ChatInteractions.h  Clip.cpp  Clip.h  Common.h  ConfigParser.cpp  Counting.cpp  Counting.h  CountingSavesystem.cpp  CountingSavesystem.h  CountingState.cpp  CountingState.h  CountingStatus.cpp  CountingStatus.h  EmojiHandler.cpp  Hazelbot.cpp  LICENSE.md  Logger.cpp  Logger.h  README.md  RegisterCommand.cpp  StringUtils.cpp  StringUtils.h  TimezoneOffsetFix.cpp  TimezoneOffsetFix.h  Two.h  bot.py  counting.py  log.py  quotes.py  starboard.py  todo.txt  two.py
Commands/: CStats.cpp  Quote.cpp  Quote.h  Quote_MessageInfo.cpp  Quote_MessageInfo.h  Wisdom.cpp
Hazelbot/: Hazelbot.cpp  Hazelbot.sln
Hazelbot/Hazelbot/: ConfigParser.cpp  ConfigParser.h  Hazelbot.cpp  Hazelbot.vcxproj  Hazelbot.vcxproj.filters  StringUtils.cpp  StringUtils.h
Modules/: ChatInteractions.cpp  Clip.cpp  Clip.h  Two.cpp
Modules/Counting/: Counting.cpp  Counting.h
cmake/: FindDPP.cmake
cmds/: CStats.cpp  CStats.h  Quote.cpp
config.sample/: hazelbot.cfg
config.sample/response/: SQUISH.txt  cabbit.txt  counting_chain_fail_doublesend.txt  counting_chain_fail_wrongnumber.txt  eightball.txt  hazelbot.txt  let there be cabbits.txt  ping.txt  silksong.txt  strikethrough.txt  wisdom_cmd.txt
src/: .gitignore  BotResponses.cpp  Common.h  ConfigParser.cpp  ConfigParser.h  EmojiHandler.h  ErrorCodes.h  Logger.cpp  Logger.h  RegisterCommand.cpp  RegisterCommand.h  TimezoneOffsetFix.cpp  TimezoneOffsetFix.h
src/Commands/: CStats.cpp  CStats.h  Quote.cpp  Quote.h  Wisdom.h
src/Modules/: ChatInteractions.cpp  ChatInteractions.h  Clip.cpp  Clip.h  Two.h
src/Modules/Counting/: Counting.cpp  CountingSavesystem.cpp
